// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentCategory should match snapshot if selected and icon 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root styles__gridItem-container___2Xeyk MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-sm-2"
  >
    <div
      class="grid-item u-pb-half u-ph-half u-bxz  u-ellipsis u-c-pointer border-selected grid-item__selected"
    >
      <div
        class="styles__IconStack-wrapper___10dhG"
      >
        <svg
          class="styles__icon___23x3R"
          height="32"
          style="fill: #297EF2;"
          width="32"
        >
          <use
            xlink:href="#file-duotone"
          />
        </svg>
        <div
          class="styles__IconStack-foregroundIcon___ZvY-t"
        >
          <svg
            class="styles__icon___23x3R"
            height="16"
            style="fill: #297EF2;"
            width="16"
          >
            <use
              xlink:href="#test"
            />
          </svg>
        </div>
      </div>
      <div
        class="u-flex u-flex-column u-ellipsis u-bxz"
      >
        <span
          class="grid-item-theme u-ellipsis"
        >
          Scan.themes.test
        </span>
        <span
          class="grid-item-label u-ellipsis"
        >
          Scan.items.test
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DocumentCategory should match snapshot if selected and icon 2`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root styles__gridItem-container___2Xeyk MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-sm-2"
  >
    <div
      class="grid-item u-pb-half u-ph-half u-bxz  u-ellipsis u-c-pointer border-selected grid-item__selected"
    >
      <div
        class="styles__IconStack-wrapper___10dhG"
      >
        <svg
          class="styles__icon___23x3R"
          height="32"
          style="fill: #297EF2;"
          width="32"
        >
          <use
            xlink:href="#file-duotone"
          />
        </svg>
        <div
          class="styles__IconStack-foregroundIcon___ZvY-t"
        >
          <svg
            class="styles__icon___23x3R"
            height="16"
            style="fill: #297EF2;"
            width="16"
          >
            <use
              xlink:href="#test"
            />
          </svg>
        </div>
      </div>
      <div
        class="u-flex u-flex-column u-ellipsis u-bxz"
      >
        <span
          class="grid-item-theme u-ellipsis"
        >
          Scan.themes.test
        </span>
        <span
          class="grid-item-label u-ellipsis"
        >
          Scan.items.test
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      style="position: fixed; left: 0px; top: 0px; z-index: #fff;"
    >
      <div
        class="styles__c-actionmenu___IUGX7 styles__c-actionmenu--inline___1RWrO"
      >
        <div
          class="styles__media___1rIBu styles__media--top___1t0j5 styles__c-actionmenu-item___WzUJQ"
        >
          <div
            class="styles__bd___3SAX2 u-mh-1 u-stack-xs"
          >
            Scan.items.Label1
          </div>
        </div>
        <div
          class="styles__media___1rIBu styles__media--top___1t0j5 styles__c-actionmenu-item___WzUJQ"
        >
          <div
            class="styles__bd___3SAX2 u-mh-1 u-stack-xs"
          >
            Scan.items.Label2
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
